Parser.output
   0  $accept : %entry% $end

   1  Prog : TyDecs FunDecs Exp EOF

   2  FunDecs : FUN ID COLON Type ARROW Type Match END FunDecs
   3          |

   4  Type : INT
   5       | ID
   6       | BOOL

   7  Types : Type COMMA Type
   8        | Type COMMA Types

   9  TyDecs : TYPE ID EQUAL LPAR Types RPAR TyDecs
  10         | TYPE ID EQUAL LPAR Type RPAR TyDecs
  11         |

  12  Pat : NUM
  13      | TRUE
  14      | FALSE
  15      | NULL
  16      | ID
  17      | LPAR Pats RPAR
  18      | LPAR Pat RPAR

  19  Pats : Pat COMMA Pat
  20       | Pat COMMA Pats

  21  Match : Pat MATCHARROW Exp
  22        | Match BAR Match

  23  Dec : Pat EQUAL Exp

  24  Decs : Dec SEMI Dec
  25       | Dec SEMI Decs

  26  Exp : NUM
  27      | TRUE
  28      | FALSE
  29      | NULL COLON ID
  30      | ID
  31      | LPAR Exps RPAR COLON ID
  32      | LPAR Exp RPAR COLON ID
  33      | Exp PLUS Exp
  34      | Exp MINUS Exp
  35      | Exp EQUAL Exp
  36      | Exp LESS Exp
  37      | NOT Exp
  38      | Exp AND Exp
  39      | Exp OR Exp
  40      | IF Exp THEN Exp ELSE Exp
  41      | LET Decs IN Exp
  42      | LET Dec IN Exp
  43      | CASE Exp OF Match END
  44      | ID Exp
  45      | READ
  46      | WRITE Exp
  47      | LPAR Exp RPAR

  48  Exps : Exp COMMA Exp
  49       | Exp COMMA Exps

  50  %entry% : '\001' Prog

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . Prog  (50)
	TyDecs : .  (11)

	TYPE  shift 3
	CASE  reduce 11
	FALSE  reduce 11
	FUN  reduce 11
	ID  reduce 11
	IF  reduce 11
	LET  reduce 11
	LPAR  reduce 11
	NOT  reduce 11
	NULL  reduce 11
	NUM  reduce 11
	READ  reduce 11
	TRUE  reduce 11
	WRITE  reduce 11

	Prog  goto 4
	TyDecs  goto 5


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	TyDecs : TYPE . ID EQUAL LPAR Types RPAR TyDecs  (9)
	TyDecs : TYPE . ID EQUAL LPAR Type RPAR TyDecs  (10)

	ID  shift 6
	.  error


state 4
	%entry% : '\001' Prog .  (50)

	.  reduce 50


state 5
	Prog : TyDecs . FunDecs Exp EOF  (1)
	FunDecs : .  (3)

	FUN  shift 7
	CASE  reduce 3
	FALSE  reduce 3
	ID  reduce 3
	IF  reduce 3
	LET  reduce 3
	LPAR  reduce 3
	NOT  reduce 3
	NULL  reduce 3
	NUM  reduce 3
	READ  reduce 3
	TRUE  reduce 3
	WRITE  reduce 3

	FunDecs  goto 8


state 6
	TyDecs : TYPE ID . EQUAL LPAR Types RPAR TyDecs  (9)
	TyDecs : TYPE ID . EQUAL LPAR Type RPAR TyDecs  (10)

	EQUAL  shift 9
	.  error


state 7
	FunDecs : FUN . ID COLON Type ARROW Type Match END FunDecs  (2)

	ID  shift 10
	.  error


state 8
	Prog : TyDecs FunDecs . Exp EOF  (1)

	CASE  shift 11
	FALSE  shift 12
	ID  shift 13
	IF  shift 14
	LET  shift 15
	LPAR  shift 16
	NOT  shift 17
	NULL  shift 18
	NUM  shift 19
	READ  shift 20
	TRUE  shift 21
	WRITE  shift 22
	.  error

	Exp  goto 23


state 9
	TyDecs : TYPE ID EQUAL . LPAR Types RPAR TyDecs  (9)
	TyDecs : TYPE ID EQUAL . LPAR Type RPAR TyDecs  (10)

	LPAR  shift 24
	.  error


state 10
	FunDecs : FUN ID . COLON Type ARROW Type Match END FunDecs  (2)

	COLON  shift 25
	.  error


state 11
	Exp : CASE . Exp OF Match END  (43)

	CASE  shift 11
	FALSE  shift 12
	ID  shift 13
	IF  shift 14
	LET  shift 15
	LPAR  shift 16
	NOT  shift 17
	NULL  shift 18
	NUM  shift 19
	READ  shift 20
	TRUE  shift 21
	WRITE  shift 22
	.  error

	Exp  goto 26


state 12
	Exp : FALSE .  (28)

	.  reduce 28


state 13
	Exp : ID .  (30)
	Exp : ID . Exp  (44)

	CASE  shift 11
	FALSE  shift 12
	ID  shift 13
	IF  shift 14
	LET  shift 15
	LPAR  shift 16
	NOT  shift 17
	NULL  shift 18
	NUM  shift 19
	READ  shift 20
	TRUE  shift 21
	WRITE  shift 22
	AND  reduce 30
	BAR  reduce 30
	COMMA  reduce 30
	ELSE  reduce 30
	END  reduce 30
	EOF  reduce 30
	EQUAL  reduce 30
	IN  reduce 30
	LESS  reduce 30
	MINUS  reduce 30
	OF  reduce 30
	OR  reduce 30
	PLUS  reduce 30
	RPAR  reduce 30
	SEMI  reduce 30
	THEN  reduce 30

	Exp  goto 27


state 14
	Exp : IF . Exp THEN Exp ELSE Exp  (40)

	CASE  shift 11
	FALSE  shift 12
	ID  shift 13
	IF  shift 14
	LET  shift 15
	LPAR  shift 16
	NOT  shift 17
	NULL  shift 18
	NUM  shift 19
	READ  shift 20
	TRUE  shift 21
	WRITE  shift 22
	.  error

	Exp  goto 28


state 15
	Exp : LET . Decs IN Exp  (41)
	Exp : LET . Dec IN Exp  (42)

	FALSE  shift 29
	ID  shift 30
	LPAR  shift 31
	NULL  shift 32
	NUM  shift 33
	TRUE  shift 34
	.  error

	Dec  goto 35
	Decs  goto 36
	Pat  goto 37


state 16
	Exp : LPAR . Exps RPAR COLON ID  (31)
	Exp : LPAR . Exp RPAR COLON ID  (32)
	Exp : LPAR . Exp RPAR  (47)

	CASE  shift 11
	FALSE  shift 12
	ID  shift 13
	IF  shift 14
	LET  shift 15
	LPAR  shift 16
	NOT  shift 17
	NULL  shift 18
	NUM  shift 19
	READ  shift 20
	TRUE  shift 21
	WRITE  shift 22
	.  error

	Exp  goto 38
	Exps  goto 39


state 17
	Exp : NOT . Exp  (37)

	CASE  shift 11
	FALSE  shift 12
	ID  shift 13
	IF  shift 14
	LET  shift 15
	LPAR  shift 16
	NOT  shift 17
	NULL  shift 18
	NUM  shift 19
	READ  shift 20
	TRUE  shift 21
	WRITE  shift 22
	.  error

	Exp  goto 40


state 18
	Exp : NULL . COLON ID  (29)

	COLON  shift 41
	.  error


state 19
	Exp : NUM .  (26)

	.  reduce 26


state 20
	Exp : READ .  (45)

	.  reduce 45


state 21
	Exp : TRUE .  (27)

	.  reduce 27


state 22
	Exp : WRITE . Exp  (46)

	CASE  shift 11
	FALSE  shift 12
	ID  shift 13
	IF  shift 14
	LET  shift 15
	LPAR  shift 16
	NOT  shift 17
	NULL  shift 18
	NUM  shift 19
	READ  shift 20
	TRUE  shift 21
	WRITE  shift 22
	.  error

	Exp  goto 42


state 23
	Prog : TyDecs FunDecs Exp . EOF  (1)
	Exp : Exp . PLUS Exp  (33)
	Exp : Exp . MINUS Exp  (34)
	Exp : Exp . EQUAL Exp  (35)
	Exp : Exp . LESS Exp  (36)
	Exp : Exp . AND Exp  (38)
	Exp : Exp . OR Exp  (39)

	AND  shift 43
	EOF  shift 44
	EQUAL  shift 45
	LESS  shift 46
	MINUS  shift 47
	OR  shift 48
	PLUS  shift 49
	.  error


state 24
	TyDecs : TYPE ID EQUAL LPAR . Types RPAR TyDecs  (9)
	TyDecs : TYPE ID EQUAL LPAR . Type RPAR TyDecs  (10)

	BOOL  shift 50
	ID  shift 51
	INT  shift 52
	.  error

	Type  goto 53
	Types  goto 54


state 25
	FunDecs : FUN ID COLON . Type ARROW Type Match END FunDecs  (2)

	BOOL  shift 50
	ID  shift 51
	INT  shift 52
	.  error

	Type  goto 55


state 26
	Exp : Exp . PLUS Exp  (33)
	Exp : Exp . MINUS Exp  (34)
	Exp : Exp . EQUAL Exp  (35)
	Exp : Exp . LESS Exp  (36)
	Exp : Exp . AND Exp  (38)
	Exp : Exp . OR Exp  (39)
	Exp : CASE Exp . OF Match END  (43)

	AND  shift 43
	EQUAL  shift 45
	LESS  shift 46
	MINUS  shift 47
	OF  shift 56
	OR  shift 48
	PLUS  shift 49
	.  error


state 27
	Exp : Exp . PLUS Exp  (33)
	Exp : Exp . MINUS Exp  (34)
	Exp : Exp . EQUAL Exp  (35)
	Exp : Exp . LESS Exp  (36)
	Exp : Exp . AND Exp  (38)
	Exp : Exp . OR Exp  (39)
	Exp : ID Exp .  (44)

	AND  reduce 44
	BAR  reduce 44
	COMMA  reduce 44
	ELSE  reduce 44
	END  reduce 44
	EOF  reduce 44
	EQUAL  reduce 44
	IN  reduce 44
	LESS  reduce 44
	MINUS  reduce 44
	OF  reduce 44
	OR  reduce 44
	PLUS  reduce 44
	RPAR  reduce 44
	SEMI  reduce 44
	THEN  reduce 44


state 28
	Exp : Exp . PLUS Exp  (33)
	Exp : Exp . MINUS Exp  (34)
	Exp : Exp . EQUAL Exp  (35)
	Exp : Exp . LESS Exp  (36)
	Exp : Exp . AND Exp  (38)
	Exp : Exp . OR Exp  (39)
	Exp : IF Exp . THEN Exp ELSE Exp  (40)

	AND  shift 43
	EQUAL  shift 45
	LESS  shift 46
	MINUS  shift 47
	OR  shift 48
	PLUS  shift 49
	THEN  shift 57
	.  error


state 29
	Pat : FALSE .  (14)

	.  reduce 14


state 30
	Pat : ID .  (16)

	.  reduce 16


state 31
	Pat : LPAR . Pats RPAR  (17)
	Pat : LPAR . Pat RPAR  (18)

	FALSE  shift 29
	ID  shift 30
	LPAR  shift 31
	NULL  shift 32
	NUM  shift 33
	TRUE  shift 34
	.  error

	Pat  goto 58
	Pats  goto 59


state 32
	Pat : NULL .  (15)

	.  reduce 15


state 33
	Pat : NUM .  (12)

	.  reduce 12


state 34
	Pat : TRUE .  (13)

	.  reduce 13


state 35
	Decs : Dec . SEMI Dec  (24)
	Decs : Dec . SEMI Decs  (25)
	Exp : LET Dec . IN Exp  (42)

	IN  shift 60
	SEMI  shift 61
	.  error


state 36
	Exp : LET Decs . IN Exp  (41)

	IN  shift 62
	.  error


state 37
	Dec : Pat . EQUAL Exp  (23)

	EQUAL  shift 63
	.  error


state 38
	Exp : LPAR Exp . RPAR COLON ID  (32)
	Exp : Exp . PLUS Exp  (33)
	Exp : Exp . MINUS Exp  (34)
	Exp : Exp . EQUAL Exp  (35)
	Exp : Exp . LESS Exp  (36)
	Exp : Exp . AND Exp  (38)
	Exp : Exp . OR Exp  (39)
	Exp : LPAR Exp . RPAR  (47)
	Exps : Exp . COMMA Exp  (48)
	Exps : Exp . COMMA Exps  (49)

	AND  shift 43
	COMMA  shift 64
	EQUAL  shift 45
	LESS  shift 46
	MINUS  shift 47
	OR  shift 48
	PLUS  shift 49
	RPAR  shift 65
	.  error


state 39
	Exp : LPAR Exps . RPAR COLON ID  (31)

	RPAR  shift 66
	.  error


state 40
	Exp : Exp . PLUS Exp  (33)
	Exp : Exp . MINUS Exp  (34)
	Exp : Exp . EQUAL Exp  (35)
	Exp : Exp . LESS Exp  (36)
	Exp : NOT Exp .  (37)
	Exp : Exp . AND Exp  (38)
	Exp : Exp . OR Exp  (39)

	EQUAL  shift 45
	LESS  shift 46
	MINUS  shift 47
	PLUS  shift 49
	AND  reduce 37
	BAR  reduce 37
	COMMA  reduce 37
	ELSE  reduce 37
	END  reduce 37
	EOF  reduce 37
	IN  reduce 37
	OF  reduce 37
	OR  reduce 37
	RPAR  reduce 37
	SEMI  reduce 37
	THEN  reduce 37


state 41
	Exp : NULL COLON . ID  (29)

	ID  shift 67
	.  error


state 42
	Exp : Exp . PLUS Exp  (33)
	Exp : Exp . MINUS Exp  (34)
	Exp : Exp . EQUAL Exp  (35)
	Exp : Exp . LESS Exp  (36)
	Exp : Exp . AND Exp  (38)
	Exp : Exp . OR Exp  (39)
	Exp : WRITE Exp .  (46)

	AND  reduce 46
	BAR  reduce 46
	COMMA  reduce 46
	ELSE  reduce 46
	END  reduce 46
	EOF  reduce 46
	EQUAL  reduce 46
	IN  reduce 46
	LESS  reduce 46
	MINUS  reduce 46
	OF  reduce 46
	OR  reduce 46
	PLUS  reduce 46
	RPAR  reduce 46
	SEMI  reduce 46
	THEN  reduce 46


state 43
	Exp : Exp AND . Exp  (38)

	CASE  shift 11
	FALSE  shift 12
	ID  shift 13
	IF  shift 14
	LET  shift 15
	LPAR  shift 16
	NOT  shift 17
	NULL  shift 18
	NUM  shift 19
	READ  shift 20
	TRUE  shift 21
	WRITE  shift 22
	.  error

	Exp  goto 68


state 44
	Prog : TyDecs FunDecs Exp EOF .  (1)

	.  reduce 1


state 45
	Exp : Exp EQUAL . Exp  (35)

	CASE  shift 11
	FALSE  shift 12
	ID  shift 13
	IF  shift 14
	LET  shift 15
	LPAR  shift 16
	NOT  shift 17
	NULL  shift 18
	NUM  shift 19
	READ  shift 20
	TRUE  shift 21
	WRITE  shift 22
	.  error

	Exp  goto 69


state 46
	Exp : Exp LESS . Exp  (36)

	CASE  shift 11
	FALSE  shift 12
	ID  shift 13
	IF  shift 14
	LET  shift 15
	LPAR  shift 16
	NOT  shift 17
	NULL  shift 18
	NUM  shift 19
	READ  shift 20
	TRUE  shift 21
	WRITE  shift 22
	.  error

	Exp  goto 70


state 47
	Exp : Exp MINUS . Exp  (34)

	CASE  shift 11
	FALSE  shift 12
	ID  shift 13
	IF  shift 14
	LET  shift 15
	LPAR  shift 16
	NOT  shift 17
	NULL  shift 18
	NUM  shift 19
	READ  shift 20
	TRUE  shift 21
	WRITE  shift 22
	.  error

	Exp  goto 71


state 48
	Exp : Exp OR . Exp  (39)

	CASE  shift 11
	FALSE  shift 12
	ID  shift 13
	IF  shift 14
	LET  shift 15
	LPAR  shift 16
	NOT  shift 17
	NULL  shift 18
	NUM  shift 19
	READ  shift 20
	TRUE  shift 21
	WRITE  shift 22
	.  error

	Exp  goto 72


state 49
	Exp : Exp PLUS . Exp  (33)

	CASE  shift 11
	FALSE  shift 12
	ID  shift 13
	IF  shift 14
	LET  shift 15
	LPAR  shift 16
	NOT  shift 17
	NULL  shift 18
	NUM  shift 19
	READ  shift 20
	TRUE  shift 21
	WRITE  shift 22
	.  error

	Exp  goto 73


state 50
	Type : BOOL .  (6)

	.  reduce 6


state 51
	Type : ID .  (5)

	.  reduce 5


state 52
	Type : INT .  (4)

	.  reduce 4


state 53
	Types : Type . COMMA Type  (7)
	Types : Type . COMMA Types  (8)
	TyDecs : TYPE ID EQUAL LPAR Type . RPAR TyDecs  (10)

	COMMA  shift 74
	RPAR  shift 75
	.  error


state 54
	TyDecs : TYPE ID EQUAL LPAR Types . RPAR TyDecs  (9)

	RPAR  shift 76
	.  error


state 55
	FunDecs : FUN ID COLON Type . ARROW Type Match END FunDecs  (2)

	ARROW  shift 77
	.  error


state 56
	Exp : CASE Exp OF . Match END  (43)

	FALSE  shift 29
	ID  shift 30
	LPAR  shift 31
	NULL  shift 32
	NUM  shift 33
	TRUE  shift 34
	.  error

	Match  goto 78
	Pat  goto 79


state 57
	Exp : IF Exp THEN . Exp ELSE Exp  (40)

	CASE  shift 11
	FALSE  shift 12
	ID  shift 13
	IF  shift 14
	LET  shift 15
	LPAR  shift 16
	NOT  shift 17
	NULL  shift 18
	NUM  shift 19
	READ  shift 20
	TRUE  shift 21
	WRITE  shift 22
	.  error

	Exp  goto 80


state 58
	Pat : LPAR Pat . RPAR  (18)
	Pats : Pat . COMMA Pat  (19)
	Pats : Pat . COMMA Pats  (20)

	COMMA  shift 81
	RPAR  shift 82
	.  error


state 59
	Pat : LPAR Pats . RPAR  (17)

	RPAR  shift 83
	.  error


state 60
	Exp : LET Dec IN . Exp  (42)

	CASE  shift 11
	FALSE  shift 12
	ID  shift 13
	IF  shift 14
	LET  shift 15
	LPAR  shift 16
	NOT  shift 17
	NULL  shift 18
	NUM  shift 19
	READ  shift 20
	TRUE  shift 21
	WRITE  shift 22
	.  error

	Exp  goto 84


state 61
	Decs : Dec SEMI . Dec  (24)
	Decs : Dec SEMI . Decs  (25)

	FALSE  shift 29
	ID  shift 30
	LPAR  shift 31
	NULL  shift 32
	NUM  shift 33
	TRUE  shift 34
	.  error

	Dec  goto 85
	Decs  goto 86
	Pat  goto 37


state 62
	Exp : LET Decs IN . Exp  (41)

	CASE  shift 11
	FALSE  shift 12
	ID  shift 13
	IF  shift 14
	LET  shift 15
	LPAR  shift 16
	NOT  shift 17
	NULL  shift 18
	NUM  shift 19
	READ  shift 20
	TRUE  shift 21
	WRITE  shift 22
	.  error

	Exp  goto 87


state 63
	Dec : Pat EQUAL . Exp  (23)

	CASE  shift 11
	FALSE  shift 12
	ID  shift 13
	IF  shift 14
	LET  shift 15
	LPAR  shift 16
	NOT  shift 17
	NULL  shift 18
	NUM  shift 19
	READ  shift 20
	TRUE  shift 21
	WRITE  shift 22
	.  error

	Exp  goto 88


state 64
	Exps : Exp COMMA . Exp  (48)
	Exps : Exp COMMA . Exps  (49)

	CASE  shift 11
	FALSE  shift 12
	ID  shift 13
	IF  shift 14
	LET  shift 15
	LPAR  shift 16
	NOT  shift 17
	NULL  shift 18
	NUM  shift 19
	READ  shift 20
	TRUE  shift 21
	WRITE  shift 22
	.  error

	Exp  goto 89
	Exps  goto 90


state 65
	Exp : LPAR Exp RPAR . COLON ID  (32)
	Exp : LPAR Exp RPAR .  (47)

	COLON  shift 91
	AND  reduce 47
	BAR  reduce 47
	COMMA  reduce 47
	ELSE  reduce 47
	END  reduce 47
	EOF  reduce 47
	EQUAL  reduce 47
	IN  reduce 47
	LESS  reduce 47
	MINUS  reduce 47
	OF  reduce 47
	OR  reduce 47
	PLUS  reduce 47
	RPAR  reduce 47
	SEMI  reduce 47
	THEN  reduce 47


state 66
	Exp : LPAR Exps RPAR . COLON ID  (31)

	COLON  shift 92
	.  error


state 67
	Exp : NULL COLON ID .  (29)

	.  reduce 29


state 68
	Exp : Exp . PLUS Exp  (33)
	Exp : Exp . MINUS Exp  (34)
	Exp : Exp . EQUAL Exp  (35)
	Exp : Exp . LESS Exp  (36)
	Exp : Exp . AND Exp  (38)
	Exp : Exp AND Exp .  (38)
	Exp : Exp . OR Exp  (39)

	AND  shift 43
	EQUAL  shift 45
	LESS  shift 46
	MINUS  shift 47
	PLUS  shift 49
	BAR  reduce 38
	COMMA  reduce 38
	ELSE  reduce 38
	END  reduce 38
	EOF  reduce 38
	IN  reduce 38
	OF  reduce 38
	OR  reduce 38
	RPAR  reduce 38
	SEMI  reduce 38
	THEN  reduce 38


state 69
	Exp : Exp . PLUS Exp  (33)
	Exp : Exp . MINUS Exp  (34)
	Exp : Exp . EQUAL Exp  (35)
	Exp : Exp EQUAL Exp .  (35)
	Exp : Exp . LESS Exp  (36)
	Exp : Exp . AND Exp  (38)
	Exp : Exp . OR Exp  (39)

	MINUS  shift 47
	PLUS  shift 49
	AND  reduce 35
	BAR  reduce 35
	COMMA  reduce 35
	ELSE  reduce 35
	END  reduce 35
	EOF  reduce 35
	IN  reduce 35
	OF  reduce 35
	OR  reduce 35
	RPAR  reduce 35
	SEMI  reduce 35
	THEN  reduce 35


state 70
	Exp : Exp . PLUS Exp  (33)
	Exp : Exp . MINUS Exp  (34)
	Exp : Exp . EQUAL Exp  (35)
	Exp : Exp . LESS Exp  (36)
	Exp : Exp LESS Exp .  (36)
	Exp : Exp . AND Exp  (38)
	Exp : Exp . OR Exp  (39)

	MINUS  shift 47
	PLUS  shift 49
	AND  reduce 36
	BAR  reduce 36
	COMMA  reduce 36
	ELSE  reduce 36
	END  reduce 36
	EOF  reduce 36
	IN  reduce 36
	OF  reduce 36
	OR  reduce 36
	RPAR  reduce 36
	SEMI  reduce 36
	THEN  reduce 36


state 71
	Exp : Exp . PLUS Exp  (33)
	Exp : Exp . MINUS Exp  (34)
	Exp : Exp MINUS Exp .  (34)
	Exp : Exp . EQUAL Exp  (35)
	Exp : Exp . LESS Exp  (36)
	Exp : Exp . AND Exp  (38)
	Exp : Exp . OR Exp  (39)

	AND  reduce 34
	BAR  reduce 34
	COMMA  reduce 34
	ELSE  reduce 34
	END  reduce 34
	EOF  reduce 34
	EQUAL  reduce 34
	IN  reduce 34
	LESS  reduce 34
	MINUS  reduce 34
	OF  reduce 34
	OR  reduce 34
	PLUS  reduce 34
	RPAR  reduce 34
	SEMI  reduce 34
	THEN  reduce 34


state 72
	Exp : Exp . PLUS Exp  (33)
	Exp : Exp . MINUS Exp  (34)
	Exp : Exp . EQUAL Exp  (35)
	Exp : Exp . LESS Exp  (36)
	Exp : Exp . AND Exp  (38)
	Exp : Exp . OR Exp  (39)
	Exp : Exp OR Exp .  (39)

	AND  shift 43
	EQUAL  shift 45
	LESS  shift 46
	MINUS  shift 47
	OR  shift 48
	PLUS  shift 49
	BAR  reduce 39
	COMMA  reduce 39
	ELSE  reduce 39
	END  reduce 39
	EOF  reduce 39
	IN  reduce 39
	OF  reduce 39
	RPAR  reduce 39
	SEMI  reduce 39
	THEN  reduce 39


state 73
	Exp : Exp . PLUS Exp  (33)
	Exp : Exp PLUS Exp .  (33)
	Exp : Exp . MINUS Exp  (34)
	Exp : Exp . EQUAL Exp  (35)
	Exp : Exp . LESS Exp  (36)
	Exp : Exp . AND Exp  (38)
	Exp : Exp . OR Exp  (39)

	AND  reduce 33
	BAR  reduce 33
	COMMA  reduce 33
	ELSE  reduce 33
	END  reduce 33
	EOF  reduce 33
	EQUAL  reduce 33
	IN  reduce 33
	LESS  reduce 33
	MINUS  reduce 33
	OF  reduce 33
	OR  reduce 33
	PLUS  reduce 33
	RPAR  reduce 33
	SEMI  reduce 33
	THEN  reduce 33


state 74
	Types : Type COMMA . Type  (7)
	Types : Type COMMA . Types  (8)

	BOOL  shift 50
	ID  shift 51
	INT  shift 52
	.  error

	Type  goto 93
	Types  goto 94


state 75
	TyDecs : TYPE ID EQUAL LPAR Type RPAR . TyDecs  (10)
	TyDecs : .  (11)

	TYPE  shift 3
	CASE  reduce 11
	FALSE  reduce 11
	FUN  reduce 11
	ID  reduce 11
	IF  reduce 11
	LET  reduce 11
	LPAR  reduce 11
	NOT  reduce 11
	NULL  reduce 11
	NUM  reduce 11
	READ  reduce 11
	TRUE  reduce 11
	WRITE  reduce 11

	TyDecs  goto 95


state 76
	TyDecs : TYPE ID EQUAL LPAR Types RPAR . TyDecs  (9)
	TyDecs : .  (11)

	TYPE  shift 3
	CASE  reduce 11
	FALSE  reduce 11
	FUN  reduce 11
	ID  reduce 11
	IF  reduce 11
	LET  reduce 11
	LPAR  reduce 11
	NOT  reduce 11
	NULL  reduce 11
	NUM  reduce 11
	READ  reduce 11
	TRUE  reduce 11
	WRITE  reduce 11

	TyDecs  goto 96


state 77
	FunDecs : FUN ID COLON Type ARROW . Type Match END FunDecs  (2)

	BOOL  shift 50
	ID  shift 51
	INT  shift 52
	.  error

	Type  goto 97


state 78
	Match : Match . BAR Match  (22)
	Exp : CASE Exp OF Match . END  (43)

	BAR  shift 98
	END  shift 99
	.  error


state 79
	Match : Pat . MATCHARROW Exp  (21)

	MATCHARROW  shift 100
	.  error


state 80
	Exp : Exp . PLUS Exp  (33)
	Exp : Exp . MINUS Exp  (34)
	Exp : Exp . EQUAL Exp  (35)
	Exp : Exp . LESS Exp  (36)
	Exp : Exp . AND Exp  (38)
	Exp : Exp . OR Exp  (39)
	Exp : IF Exp THEN Exp . ELSE Exp  (40)

	AND  shift 43
	ELSE  shift 101
	EQUAL  shift 45
	LESS  shift 46
	MINUS  shift 47
	OR  shift 48
	PLUS  shift 49
	.  error


state 81
	Pats : Pat COMMA . Pat  (19)
	Pats : Pat COMMA . Pats  (20)

	FALSE  shift 29
	ID  shift 30
	LPAR  shift 31
	NULL  shift 32
	NUM  shift 33
	TRUE  shift 34
	.  error

	Pat  goto 102
	Pats  goto 103


state 82
	Pat : LPAR Pat RPAR .  (18)

	.  reduce 18


state 83
	Pat : LPAR Pats RPAR .  (17)

	.  reduce 17


state 84
	Exp : Exp . PLUS Exp  (33)
	Exp : Exp . MINUS Exp  (34)
	Exp : Exp . EQUAL Exp  (35)
	Exp : Exp . LESS Exp  (36)
	Exp : Exp . AND Exp  (38)
	Exp : Exp . OR Exp  (39)
	Exp : LET Dec IN Exp .  (42)

	AND  shift 43
	EQUAL  shift 45
	LESS  shift 46
	MINUS  shift 47
	OR  shift 48
	PLUS  shift 49
	BAR  reduce 42
	COMMA  reduce 42
	ELSE  reduce 42
	END  reduce 42
	EOF  reduce 42
	IN  reduce 42
	OF  reduce 42
	RPAR  reduce 42
	SEMI  reduce 42
	THEN  reduce 42


state 85
	Decs : Dec . SEMI Dec  (24)
	Decs : Dec SEMI Dec .  (24)
	Decs : Dec . SEMI Decs  (25)

	SEMI  shift 61
	IN  reduce 24


state 86
	Decs : Dec SEMI Decs .  (25)

	.  reduce 25


state 87
	Exp : Exp . PLUS Exp  (33)
	Exp : Exp . MINUS Exp  (34)
	Exp : Exp . EQUAL Exp  (35)
	Exp : Exp . LESS Exp  (36)
	Exp : Exp . AND Exp  (38)
	Exp : Exp . OR Exp  (39)
	Exp : LET Decs IN Exp .  (41)

	AND  shift 43
	EQUAL  shift 45
	LESS  shift 46
	MINUS  shift 47
	OR  shift 48
	PLUS  shift 49
	BAR  reduce 41
	COMMA  reduce 41
	ELSE  reduce 41
	END  reduce 41
	EOF  reduce 41
	IN  reduce 41
	OF  reduce 41
	RPAR  reduce 41
	SEMI  reduce 41
	THEN  reduce 41


state 88
	Dec : Pat EQUAL Exp .  (23)
	Exp : Exp . PLUS Exp  (33)
	Exp : Exp . MINUS Exp  (34)
	Exp : Exp . EQUAL Exp  (35)
	Exp : Exp . LESS Exp  (36)
	Exp : Exp . AND Exp  (38)
	Exp : Exp . OR Exp  (39)

	AND  shift 43
	EQUAL  shift 45
	LESS  shift 46
	MINUS  shift 47
	OR  shift 48
	PLUS  shift 49
	IN  reduce 23
	SEMI  reduce 23


state 89
	Exp : Exp . PLUS Exp  (33)
	Exp : Exp . MINUS Exp  (34)
	Exp : Exp . EQUAL Exp  (35)
	Exp : Exp . LESS Exp  (36)
	Exp : Exp . AND Exp  (38)
	Exp : Exp . OR Exp  (39)
	Exps : Exp . COMMA Exp  (48)
	Exps : Exp COMMA Exp .  (48)
	Exps : Exp . COMMA Exps  (49)

	AND  shift 43
	COMMA  shift 64
	EQUAL  shift 45
	LESS  shift 46
	MINUS  shift 47
	OR  shift 48
	PLUS  shift 49
	RPAR  reduce 48


state 90
	Exps : Exp COMMA Exps .  (49)

	.  reduce 49


state 91
	Exp : LPAR Exp RPAR COLON . ID  (32)

	ID  shift 104
	.  error


state 92
	Exp : LPAR Exps RPAR COLON . ID  (31)

	ID  shift 105
	.  error


state 93
	Types : Type . COMMA Type  (7)
	Types : Type COMMA Type .  (7)
	Types : Type . COMMA Types  (8)

	COMMA  shift 74
	RPAR  reduce 7


state 94
	Types : Type COMMA Types .  (8)

	.  reduce 8


state 95
	TyDecs : TYPE ID EQUAL LPAR Type RPAR TyDecs .  (10)

	.  reduce 10


state 96
	TyDecs : TYPE ID EQUAL LPAR Types RPAR TyDecs .  (9)

	.  reduce 9


state 97
	FunDecs : FUN ID COLON Type ARROW Type . Match END FunDecs  (2)

	FALSE  shift 29
	ID  shift 30
	LPAR  shift 31
	NULL  shift 32
	NUM  shift 33
	TRUE  shift 34
	.  error

	Match  goto 106
	Pat  goto 79


state 98
	Match : Match BAR . Match  (22)

	FALSE  shift 29
	ID  shift 30
	LPAR  shift 31
	NULL  shift 32
	NUM  shift 33
	TRUE  shift 34
	.  error

	Match  goto 107
	Pat  goto 79


state 99
	Exp : CASE Exp OF Match END .  (43)

	.  reduce 43


state 100
	Match : Pat MATCHARROW . Exp  (21)

	CASE  shift 11
	FALSE  shift 12
	ID  shift 13
	IF  shift 14
	LET  shift 15
	LPAR  shift 16
	NOT  shift 17
	NULL  shift 18
	NUM  shift 19
	READ  shift 20
	TRUE  shift 21
	WRITE  shift 22
	.  error

	Exp  goto 108


state 101
	Exp : IF Exp THEN Exp ELSE . Exp  (40)

	CASE  shift 11
	FALSE  shift 12
	ID  shift 13
	IF  shift 14
	LET  shift 15
	LPAR  shift 16
	NOT  shift 17
	NULL  shift 18
	NUM  shift 19
	READ  shift 20
	TRUE  shift 21
	WRITE  shift 22
	.  error

	Exp  goto 109


state 102
	Pats : Pat . COMMA Pat  (19)
	Pats : Pat COMMA Pat .  (19)
	Pats : Pat . COMMA Pats  (20)

	COMMA  shift 81
	RPAR  reduce 19


state 103
	Pats : Pat COMMA Pats .  (20)

	.  reduce 20


state 104
	Exp : LPAR Exp RPAR COLON ID .  (32)

	.  reduce 32


state 105
	Exp : LPAR Exps RPAR COLON ID .  (31)

	.  reduce 31


state 106
	FunDecs : FUN ID COLON Type ARROW Type Match . END FunDecs  (2)
	Match : Match . BAR Match  (22)

	BAR  shift 98
	END  shift 110
	.  error


state 107
	Match : Match . BAR Match  (22)
	Match : Match BAR Match .  (22)

	BAR  shift 98
	END  reduce 22


state 108
	Match : Pat MATCHARROW Exp .  (21)
	Exp : Exp . PLUS Exp  (33)
	Exp : Exp . MINUS Exp  (34)
	Exp : Exp . EQUAL Exp  (35)
	Exp : Exp . LESS Exp  (36)
	Exp : Exp . AND Exp  (38)
	Exp : Exp . OR Exp  (39)
